fixed: switching context wont leave the progress bar distorted; changed: video playlist only renders when needs to.
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@33762 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/addons/webinterface.default/css/core.css
+++ b/addons/webinterface.default/css/core.css
@@ -282,7 +282,8 @@ div.imgWrapper div.inner {
 	color: #777;
 	}
 
-#trackWrap {
+#audioTrackWrap,
+#videoTrackWrap {
 	width: 365px;
 	white-space: nowrap;
 	overflow: hidden;
